--- a/style.css
+++ b/style.css
@@ -13,7 +13,47 @@
 		padding:40px;
 		
 }
-.aposta{
+@media( max-width : 585px ) {
+.desenho{
+		background-color:rgba(0,0,0,0);
+		background-image:url(img/creditos.png);
+		background-position:center left;
+		background-repeat:no-repeat;
+		background-size: 100%;
+		border-color:rgba(0,0,0,0.0);
+		color:white;
+		font-size:15px;
+		text-align: center;
+		font-weight:bold;
+		width:100%;
+		height:100%;
+		
+}
+.bug{
+		background-color:rgba(0,0,0,0);
+		background-image:url(img/creditos2.png);
+		background-position:center left;
+		background-repeat:no-repeat;
+		background-size: 100%;
+		border-color:rgba(0,0,0,0.0);
+		color:white;
+		font-size:15px;
+		text-align: right;
+		font-weight:bold;
+		padding:40px;
+		width:100%;
+		height:100%;
+		
+}
+.buttons {
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 60px;
+	width:120%;
+	height:120%;
+	
+}}
+.bug{
 		background-color:rgba(0,0,0,0);
 		background-image:url(img/creditos2.png);
 		background-position:center left;
@@ -35,8 +75,8 @@
 .imagens2 {
     border: 8px solid #CFCFCF;
 	border-radius: 5px;
-	width:90px;
-	height:90px;
+	width:100%;
+	height:100%;
 	}
  
 
@@ -44,40 +84,10 @@
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 60px;
+	width:100%;
+	height:100%;
 	
 }
-.modal-header {
-  padding: 2px 16px;
-background-color: #FFD700;}
-.modal-title{
-  color: white;
-  font-size:15px;
-  font-weight:bold;
-}
-
-/* Modal Body */
-.modal-body {padding: 2px 16px;}
-
-/* Modal Footer */
-.modal-footer {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
-}
-
-/* Modal Content */
-.modal-content {
-  position: relative;
-  background-color: #fefefe;
-  margin: auto;
-  padding: 0;
-  border: 1px solid #888;
-  width: 80%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-  animation-name: animatetop;
-  animation-duration: 0.4s
-}
-
 .myButton {
 	box-shadow:inset 0px 1px 0px 0px #000000;
 	background:linear-gradient(to bottom, #000000 5%, #000000 100%);
